<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MyPictureLog</string>

    <!-- Main View -->
    <string id="ButtonSettings" name="ButtonSettings"/>
    <string id="ButtonLogStopStart" name="ButtonLogStopStart">Start / Stop</string>
    <string id="Welcome" name="Welcome">Welcome To MyPictureLog</string>
    <string id="ButtonLogList" name="ButtonLogList"/>
    <!-- Settings view -->

    <string id="ApplicationModeText" name="ApplicationModeText">Log precision : </string>
    <string id="ApplicationModeSpinner" name="ApplicationModeSpinner">Choose your frequency</string>
    <string id="AutoModeText" name="AutoModeText">Journaux Automatiques : </string>
    <string id="CameraTimeZoneText" name="CameraTimeZoneText">Camera Time Zone : </string>
    <string id="CameraTimeZoneSpinner" name="CameraTimeZoneSpinner">Choose your time zone</string>
    <string id="DateFormatText" name="DateFormatText">Prefered date format : </string>
    <string id="DateFormatSpinner" name="DateFormatSpinner">Choose your time zone</string>
    <string id="UserLanguageText" name="UserLanguageText">Prefered Language : </string>
    <string id="UserLanguageSpinner" name="UserLanguageSpinner">Choose your language</string>
    <string id="ConnectedAccountValue" name="ConnectedAccountValue">Not available</string>
    <string id="ConnectedAccountLabel" name="ConnectedAccountButton">Connect account</string>
    <string id="AutoModeSyncHourOfDayText" name="AutoModeSyncHourOfDayText">Sync hour of day : </string>
    <string id="FilmToolText" name="FilmToolText">Use film tool : </string>
    <string id="KnwonLocationsText" name="KnwonLocationsText">Known Locations : </string>
    <string id="KnwonLocationsValues" name="KnwonLocationsValues">N/A</string>

    <string id="ButtonHome" name="ButtonHome">Home</string>

    <!-- Log Start View -->
    <string id="PointCountLabel" name="PointCountLabel">Point Count : </string>
    <string id="PointCount" name="PointCount"/>
    <string id="TimeZoneLabel" name="TimeZoneLabel">Time Zone : </string>
    <string id="TimeZone" name="TimeZone"/>
    <string id="LogNameLabel" name="LogNameLabel">Log Name : </string>
    <string id="LogName" name="LogName"/>
    <string id="LastLatitudeLabel" name="LastLatitudeLabel">Last Latitude : </string>
    <string id="LastLatitude" name="LastLatitude"/>
    <string id="LastLongitudeLabel" name="LastLongitudeLabel">Last Longitude : </string>
    <string id="LastLongitude" name="LastLongitude"/>
    <string id="LastAltitudeLabel" name="LastAltitudeLabel">Las Altitude : </string>
    <string id="LastAltitude" name="LastAltitude"/>

    <string id="LastPointDateLabel" name="LastPointDateLabel">Last Point Date : </string>
    <string id="DistanceLabel" name="DistanceLabel">Distance : </string>
    <string id="LastPointDate" name="LastPointDate"/>
    <string id="LogHomeButton" name="LogHomeButton">Home</string>
    <string id="LogStartNewLog" name="LogStartNewLog">Start new log</string>
    <string id="ImageButtonLogStopStart" name="ImageButtonLogStopStart">Start / Stop</string>
    <string id="LastKnownLocationName" name="LastKnownLocationName">unknown</string>

    <!-- Delete -->
    <string id="DeleteQuestion" name="DeleteQuestion">Are you sure you want to delete this log ?</string>
    <string id="DeleteYesImageButton" name="DeleteYesImageButton">Yes</string>
    <string id="DeleteNoImageButton" name="DeleteNoImageButton">Yes</string>
    <string id="DeleteYesButton" name="DeleteYesButton">Yes</string>
    <string id="DeleteNoButton" name="DeleteNoButton">No</string>

    <!-- Log List View -->
    <string id="LogList" name="LogList"/>
    <string id="LogListIcon" name="LogListIcon"/>
    <string id="LogListLabel" name="LogListLabel"/>
    <string id="LogListView" name="LogListView"/>
    <string id="LogListHomeButton"  name="LogListHomeButton">Home</string>
    <string id="LogListDeleteButton" name="LogListDeleteButton"/>

    <!-- Account -->
    <string id="AccountLogo" name="AccountLogo"/>
    <string id="AccountLabel" name="AccountLabel"/>
    <string id="ConnectionList" name="ConnectionList"/>

    <!-- Connected -->
    <string id="ConnectedYesButton" name="ConnectedYesButton">Yes</string>
    <string id="ConnectedNoButton" name="ConnectedNoButton">No</string>
    <string id="ConnectedYesImageButton" name="ConnectedYesImageButton">Yes</string>
    <string id="ConnectedNoImageButton" name="ConnectedNoImageButton">No</string>
    <string id="ConnectedText" name="ConnectedText">Have ever been connected to url http://application.mypicturelog.com ?</string>
    <string id="ChooseAccount" name="ChooseAccount">Choose which account you want to connect</string>
    <string id="ConnectWebView" name="ConnectWebView">Connect WebView</string>
</resources>
