<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="100dp">

        <ImageButton
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:id="@+id/ButtonHome"
                android:src="@drawable/house"
                android:background="#000000"/>
        <ImageButton
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:id="@+id/ButtonLogList"
                android:src="@drawable/database"
                android:background="#000000"/>

        <ImageButton
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/video"
                android:id="@+id/ButtonFilmTools"
                android:background="#000000"/>

    </LinearLayout>



    <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" android:orientation="vertical">

        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ApplicationModeText"
                    android:id="@+id/ApplicationModeText"
                    android:textSize="20dp"
                    android:layout_column="0"/>
            <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"
                    android:id="@+id/ApplicationModeSpinner" android:layout_column="1" android:spinnerMode="dropdown"/>
        </TableRow>

        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/AutoModeText"
                    android:textSize="20dp"
                    android:id="@+id/AutoModeText" android:layout_column="0"/>

            <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/AutoModeCheckBox"
                    android:layout_column="1"
                    android:textSize="20dp"
                    android:checked="true"/>
        </TableRow>

        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"
                    android:text="@string/AutoModeSyncHourOfDayText"
                    android:id="@+id/AutoModeSyncHourOfDayText"
                    android:layout_column="0"/>

            <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/AutoModeSyncHourOfDaySpinner"
                    android:layout_column="1"/>
        </TableRow>

        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/CameraTimeZoneText"
                    android:textSize="20dp"
                    android:id="@+id/CameraTimeZoneText" android:layout_column="0"/>
            <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"
                    android:id="@+id/CameraTimeZoneRegionSpinner"
                    android:layout_column="1"/>
        </TableRow>

        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

            <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"
                    android:id="@+id/CameraTimeZoneSpinner"
                    android:layout_column="1"/>
        </TableRow>

        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/DateFormatText"
                    android:textSize="20dp"
                    android:id="@+id/DateFormatText" android:layout_column="0"/>
            <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"
                    android:id="@+id/DateFormatSpinner" android:layout_column="1" android:spinnerMode="dropdown"/>
        </TableRow>

        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/UserLanguageText"
                    android:textSize="20dp"
                    android:id="@+id/UserLanguageText" android:layout_column="0"/>
            <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"
                    android:id="@+id/UserLanguageSpinner" android:layout_column="1" android:spinnerMode="dropdown"/>
        </TableRow>

        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/FilmToolText"
                    android:textSize="20dp"
                    android:id="@+id/FilmToolText" android:layout_column="0"/>

            <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/FilmToolCheckBox"
                    android:layout_column="1"
                    android:textSize="20dp"
                    android:checked="false"/>
        </TableRow>

        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ConnectedAccountButton"
                    android:textSize="20dp"
                    android:id="@+id/ConnectedAccountButton" android:layout_column="0"/>
        </TableRow>

    </TableLayout>
</LinearLayout>